--- a/platform/cc2530dk/Makefile.cc2530dk
+++ b/platform/cc2530dk/Makefile.cc2530dk
@@ -14,6 +14,8 @@ CONTIKI_TARGET_SOURCEFILES += button-sensor.c adc-sensor.c
 CONTIKI_TARGET_SOURCEFILES += serial-line.c slip-arch.c slip.c
 CONTIKI_TARGET_SOURCEFILES += putchar.c debug.c
 CONTIKI_TARGET_SOURCEFILES += usb-serial.c
+CONTIKI_TARGET_SOURCEFILES += 12864.c
+CONTIKI_TARGET_SOURCEFILES += DHT11.c
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
